# qt6-meson-template

./: .clang-format  README.md  meson.build
.format/: google.clang-format  qt.clang-format
.github/workflows/: meson-multi-platform.yml
inc/: mainwindow.h
src/: mainwindow.cpp
ui/: mainwindow.ui
